# cmd/serve.go
@@ -1,8 +1,16 @@
 package cmd
 
 import (
+	"context"
+	"github.com/crosstyan/dumb_downloader/entity"
 	"github.com/crosstyan/dumb_downloader/global/log"
+	"github.com/crosstyan/dumb_downloader/utils"
+	"github.com/imroc/req/v3"
+	"github.com/samber/mo"
 	"net/http"
+	"os"
+	"path"
+	"strings"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/cors"
@@ -34,7 +42,7 @@ func serveRun(cmd *cobra.Command, args []string) {
 	})
 	swaggerH := httpSwagger.Handler(
 		// The url pointing to API definition
-		httpSwagger.URL("/swagger/doc.json"),
+		httpSwagger.URL("/swagger/swagger.json"),
 	)
 	r.Use(chiZapM, corsM)
 	r.Get("/swagger/*", swaggerH)
@@ -44,8 +52,122 @@ func serveRun(cmd *cobra.Command, args []string) {
 	}
 }
 
-func tryDownload() {
+func tryDownload(ctx context.Context, reqChan <-chan entity.ReqResp, client *req.Client, baseOutDir string) {
+	for {
+		select {
+		case <-ctx.Done():
+			return
+		case reqResp := <-reqChan:
+			{
+				r := reqResp.Request
+				if r == nil {
+					log.Sugar().Errorw("nil request")
+					continue
+				}
+				R := client.R()
+				cookies := utils.Map(r.Cookies, func(c http.Cookie) *http.Cookie { return &c })
+				R.SetCookies(cookies...)
+				// don't break the impersonation
+				for k, v := range r.Headers {
+					R.Headers.Add(k, v)
+				}
+				printHeadersCookies := func() {
+					headers := R.Headers
+					log.Sugar().Debugw("request headers", "headers", headers)
+					cs := R.Cookies
+					for _, c := range cs {
+						log.Sugar().Debugw("cookie", "name", c.Name, "value", c.Value)
+					}
+				}
+				var resp *req.Response
+				var err error
+				// if it's async we could just use this goroutine to get the response
+				if !reqResp.IsSync {
+					resp, err = R.Get(r.Url)
+				} else {
+					// otherwise we have to poll the context
+					type ResultIn = *req.Response
+					c := make(chan mo.Result[ResultIn])
+					go func() {
+						resp, err := R.Get(r.Url)
+						if err != nil {
+							c <- mo.Err[ResultIn](err)
+							return
+						}
+						c <- mo.Ok[ResultIn](resp)
+					}()
+					select {
+					case <-ctx.Done():
+						log.Sugar().Warnw("context cancelled", "url", r.Url)
+						continue
+					case result := <-c:
+						resp, err = result.Get()
+					}
+				}
+				if err != nil {
+					if reqResp.ResponseChannel != nil && reqResp.IsSync {
+						*reqResp.ResponseChannel <- mo.Err[entity.RespIn](err)
+					}
+					log.Sugar().Errorw("failed to download", "url", r.Url, "error", err)
+					printHeadersCookies()
+					continue
+				}
+				if reqResp.ResponseChannel != nil && reqResp.IsSync {
+					dlR := entity.DownloadResponse{}
+					for k, v := range resp.Header {
+						vv := strings.Join(v, ",")
+						dlR.Headers[k] = vv
+					}
+					ct, ok := utils.TryGet(dlR.Headers, "Content-Type", "content-type", "Content-type", "content-Type", "Content-TYPE").Get()
+					if ok {
+						dlR.MIMEType = ct
+					}
+					dlR.StatusCode = resp.StatusCode
+					dlR.Url = r.Url
+					dlR.Body = resp.Bytes()
 
+					*reqResp.ResponseChannel <- mo.Ok[entity.RespIn](&dlR)
+				}
+				if r.OutPrefix == nil {
+					log.Sugar().Infow("proxy", "url", r.Url)
+					continue
+				}
+				// only save image type
+				if ct := resp.Header.Get("Content-Type"); strings.Contains(ct, "image") {
+					log.Sugar().Errorw("not a jpeg image", "url", r.Url, "Content-Type", ct)
+					log.Sugar().Debugw("response", "headers", resp.Header, "response", resp.String())
+					printHeadersCookies()
+					return
+				}
+				outDir := path.Join(baseOutDir, *r.OutPrefix)
+				stat, err := os.Stat(outDir)
+				if !os.IsNotExist(err) {
+					if !stat.IsDir() {
+						log.Sugar().Errorw("invalid output directory",
+							"url", r.Url, "output", outDir, "prefix", *r.OutPrefix)
+						// fallback to base output directory
+						outDir = baseOutDir
+					}
+				} else {
+					log.Sugar().Warnw("create new output directory", "url", r.Url, "directory", outDir, "prefix", *r.OutPrefix)
+					err = os.MkdirAll(outDir, 0755)
+					if err != nil {
+						log.Sugar().Errorw("failed to create output directory", "url", r.Url, "directory", outDir, "prefix", *r.OutPrefix, "error", err)
+						// fallback to base output directory
+						outDir = baseOutDir
+					}
+				}
+				out := path.Join(outDir, path.Base(r.Url))
+				err = os.WriteFile(out, resp.Bytes(), 0644)
+				if err != nil {
+					log.Sugar().Errorw("failed to save", "url", r.Url, "output", out, "error", err)
+					continue
+				} else {
+					log.Sugar().Infow("downloaded", "url", r.Url, "output", out)
+				}
+			}
+		}
+	}
 }
 
 var serve = cobra.Command{
