# docs/swagger.json
@@ -40,6 +40,12 @@
                         "schema": {
                             "$ref": "#/definitions/entity.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -55,6 +61,12 @@
                 ],
                 "summary": "Sync Download",
                 "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "If the response is transparent. See also strconv.ParseBool",
+                        "name": "transparent",
+                        "in": "query"
+                    },
                     {
                         "description": "download request",
                         "name": "request",
@@ -74,6 +86,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/entity.ErrorResponse"
                         }
@@ -115,7 +133,7 @@
             "type": "object",
             "properties": {
                 "body": {
-                    "description": "if it's binary, it's base64 encoded. Otherwise,\nif it's text, it's utf-8 encoded",
+                    "description": "if it's binary, it's base64 encoded. Otherwise,\nit's text",
                     "type": "string",
                     "example": "\u003chtml\u003e...\u003c/html\u003e"
                 },
@@ -124,6 +142,10 @@
                     "additionalProperties": {
                         "type": "string"
                     }
+                },
+                "mime_type": {
+                    "type": "string",
+                    "example": "text/html"
                 },
                 "status_code": {
                     "type": "integer",
